Fix ingredient cart alignment again. Make cream colour lighter.

--- a/src/pages/Recipe/Recipe.css
+++ b/src/pages/Recipe/Recipe.css
@@ -12,6 +12,10 @@
   align-items: baseline;
 }
 
+.flex-row.recipe-subheading {
+  align-items: center;
+}
+
 /* Ingredients */
 .ingredient-list-display {
   padding: 0;
