--- a/src/styles/globals/variables.css
+++ b/src/styles/globals/variables.css
@@ -1,6 +1,6 @@
 :root {
   --cream: #f2e7d2;
-  --cream-light: #faf5ed;
+  --cream-light: #fff9f0;
   --light-brown: #523f19bf;
   --brown: #55443c;
   --dark-brown: #342a24;
